--- a/legv8sim/pyproject.toml
+++ b/legv8sim/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["maturin>=1.4,<2.0"]
 build-backend = "maturin"
 
 [project]
-name = "legv8sim"
+name = "legv8parse"
 requires-python = ">=3.8"
 classifiers = [
     "Programming Language :: Rust",
